--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta id="viewport" content="width=device-width, initial-scale=1.0">
     <title>金管楽器譜読みサイト</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/jpg" href="images/favicon.jpg">
+    <link rel="icon" type="image/jpg" href="favicon.jpg">
 </head>
 
 <body>
@@ -33,8 +33,8 @@
             <p>
                 <b>楽譜の読み方 [音名表]</b>
             </p>
-            <image src="images/high.jpg" alt="ト音記号のドイツ音名一覧" class="img" />
-            <image src="images/low.jpg" al="ヘ音記号のドイツ音名一覧" class="img" />
+            <image src="high.jpg" alt="ト音記号のドイツ音名一覧" class="img" />
+            <image src="low.jpg" al="ヘ音記号のドイツ音名一覧" class="img" />
         </div>
         <button id="open">
             使い方ガイド
@@ -124,5 +124,6 @@
 <script src="miSelect.js"></script>
 <script src="index.js"></script>
 <script src="animate.js"></script>
+
 
 </html>
